# PVANet_cxx_interface

./: CMakeLists.txt  README.md
executable/: CMakeLists.txt  pvademo.cpp
include/HungarianAlg/: HungarianAlg.h
include/KCF/: kcftracker.hpp
include/PvaDetector/: detection.h  pvaDetector.h
include/utils/: ColorHistComparer.h  DistanceComparer.h  file.h  selectRoiByMouse.h
src/: CMakeLists.txt
src/OpenCVputTextChinese/: OpencvText.cpp  OpencvText.h
src/PvaDetector/: detection.cpp  pvaDetector.cpp
src/myfUtils/: FileOperator.cpp  FileOperator.h  MatOperation.cpp  MatOperation.h  RectangleOperation.cpp  RectangleOperation.h
src/utils/: ColorHistComparer.cpp  DistanceComparer.cpp  file.cpp  selectRoiByMouse.cpp
